--- a/en/apps.html
+++ b/en/apps.html
@@ -37,14 +37,14 @@
 <div class="col-md-4">
 <p><a href="metalogic.html"><img src="../images/metalogic/logo.png" class="macapp" /></a></p>
 <h2>MetaLogic</h2>
-<p>The productive util used to organise programming assets.<br><br><a href="metalogic.html"><b>MetaLogic</b></a> is a small util developed to effectively manage programming assets, include shell snippets, code blocks, sample code files, libraries, packages, Web links and other resources.</p>
+<p>The productive utility used to organise programming assets.<br><br><a href="metalogic.html"><b>MetaLogic</b></a> is a small utility developed to effectively manage programming assets, include shell snippets, code blocks, sample code files, libraries, packages, Web links and other resources.</p>
 </div> <!-- col-md-4-->
 
 
 <div class="col-md-4">
 <p><a href="vtool.html"><img src="../images/vtool/logo.png" class="macapp" /></a></p>
 <h2>vTool</h2>
-<p><a href="vtool.html">vTool</a> is a small GUI frontend of FFmpeg for macOS. A small video manipulating util developed to help people deal with all kinds of video files in daily life easy and simple. With help of it, extract audio from video, scale video, crop video, merge multiple video files together, and convert video file format, can be accomplished by several clicks. </p>
+<p><a href="vtool.html">vTool</a> is a small GUI frontend of FFmpeg for macOS. A small video manipulating utility developed to help people deal with all kinds of video files in daily life easy and simple. With help of it, extract audio from video, scale video, crop video, merge multiple video files together, and convert video file format, can be accomplished by several clicks. </p>
 </div> <!-- col-md-4-->
 
 <div class="col-md-4">
@@ -73,7 +73,7 @@
 <div class="col-md-4">
 <p><a href="littlefox.html"><img src="../images/littlefox/logo.png" class="macapp" /></a></p>
 <h2>LittleFox</h2>
-<p>The small util for making karaoke videos in a comfortable way.<br><br>
+<p>The small utility for making karaoke videos in a comfortable way.<br><br>
 <a href="littlefox.html"><b>LittleFox</b></a> is a small tool designed to help user share audio or video on social websites or make slideshows with speech audio and picture in a simple and efficient way. It was developed to conveniently synthesis subtitle with video or audio without traditional boring works.</p>
 </div> <!-- col-md-4-->
 </div><!-- row -->
