--- a/en/index.html
+++ b/en/index.html
@@ -54,14 +54,14 @@ The free small IDE for scripting languages.
 <h2>MetaLogic</h2>
 <p>
 <a href="http://www.sevenuc.com/en/metalogic.html" target="_blank"><img src="http://www.sevenuc.com/images/metalogic/logo.png" style="float:left; margin-top:0.2em;margin-right:1em;margin-bottom:0.5em;height:160px; width:auto;">
-<a href="http://www.sevenuc.com/en/metalogic.html">MetaLogic</a> is a small util developed to effectively manage programming assets, include shell snippets, code blocks, sample code files, libraries, packages, Web links and other resources. It's also a powerful util used to classify and organise programming resource by topics, categories, functions, programming languages, key words etc. MetaLogic help people organise large amount of programming resources in a very flexible way, and has complete freedom to define all kinds of metadata fields for management of classification and organisation.</p>
+<a href="http://www.sevenuc.com/en/metalogic.html">MetaLogic</a> is a small utility developed to effectively manage programming assets, include shell snippets, code blocks, sample code files, libraries, packages, Web links and other resources. It's also a powerful utility used to classify and organise programming resource by topics, categories, functions, programming languages, key words etc. MetaLogic help people organise large amount of programming resources in a very flexible way, and has complete freedom to define all kinds of metadata fields for management of classification and organisation.</p>
 
 <p><br><br><br><br><br></p>
 
 <h2>Sounler</h2>
 <p>
 <a href="http://www.sevenuc.com/en/sounler.html" target="_blank"><img src="http://www.sevenuc.com/images/sounler/logo.png" style="float:left; margin-top:0.2em;margin-right:1em;margin-bottom:0.5em;height:160px; width:auto;">
-<a href="http://www.sevenuc.com/en/sounler.html">Sounler</a> is a designedly small util for audio file classification and organisation, a small chiptune player for all classic home computers.  Sounler is a small audio player developed to play various of audio format on NES (Nintendo Entertainment System), SNES (Super Nintendo Entertainment System), GBA (Game Boy Advance), WII, NDS, 3DS, N64, GameCube, and PS1 (Sony PlayStation 1), PS2 (Sony PlayStation 2) and PSP (Sony PlayStation Portable), PSX, and Sega Genesis, Sega Mega Drive, Sega Dreamcast, and Microsoft XBOX, and DOS, Amiga, Spectrum and more.</p>
+<a href="http://www.sevenuc.com/en/sounler.html">Sounler</a> is a designedly small utility for audio file classification and organisation, a small chiptune player for all classic home computers.  Sounler is a small audio player developed to play various of audio format on NES (Nintendo Entertainment System), SNES (Super Nintendo Entertainment System), GBA (Game Boy Advance), WII, NDS, 3DS, N64, GameCube, and PS1 (Sony PlayStation 1), PS2 (Sony PlayStation 2) and PSP (Sony PlayStation Portable), PSX, and Sega Genesis, Sega Mega Drive, Sega Dreamcast, and Microsoft XBOX, and DOS, Amiga, Spectrum and more.</p>
 
 
 <p><br><br><br><br><br><br><br><br></p>
