--- a/en/lyricsmaker.html
+++ b/en/lyricsmaker.html
@@ -27,8 +27,8 @@
     <div class="jumbotron">
         <p><img src="../images/lyricsmaker/logo.png" style="width: 120px;" /></p>
         <h1>LyricsMaker<br><em>Version 1.2</em></h1>
-        <p class="greenbig">The designedly util to make lyrics sheets easy.</p>
-        <p class="lead"><b>LyricsMaker</b> is a small util that was designed to conveniently make lyrics sheet for music or generate subtitle for movie, and later them can be easily synthesised by <a href="littlefox.html">LitterFox</a>. It do one thing in a simple way, i.e, listen audio or watch video and make time marks by simple clicks.</p>
+        <p class="greenbig">The designedly utility to make lyrics sheets easy.</p>
+        <p class="lead"><b>LyricsMaker</b> is a small utility that was designed to conveniently make lyrics sheet for music or generate subtitle for movie, and later them can be easily synthesised by <a href="littlefox.html">LitterFox</a>. It do one thing in a simple way, i.e, listen audio or watch video and make time marks by simple clicks.</p>
     </div>
     
 
@@ -72,7 +72,7 @@ From May 2020, LyricsMaker turned to be a paid app, because thousands of people 
 
 <h2>Refrences</h2>
 <p><a href="littlefox.html"><img src="../images/littlefox/logo.png"  style="width: 40px;" /></a>
-<a href="littlefox.html">LittleFox</a>, the designedly small util that used to synthesis subtitle with audio and video in a comfortable way.<br>
+<a href="littlefox.html">LittleFox</a>, the designedly small utility that used to synthesis subtitle with audio and video in a comfortable way.<br>
 
 <span><a href="http://unkown.org/" target="_blank"><img src="../images/unkown-org-logo.png" style="width: 40px;"/></a></span>
  my music video site: <a href="http://unkown.org"> http://unkown.org</a>, my creative artworks made by LyricsMaker and <a href="littlefox.html">LittleFox</a>.
