--- a/en/speare.html
+++ b/en/speare.html
@@ -38,7 +38,7 @@ w {color:#ffc8c8; font-weight: bold;}
 <!--p class="greenbig">It's free!</p-->
 
 <h2>It's not free now!</h2>
-<p>Speare has really good features, such as parallel editing, high performance searching and symbol definition parsing. But after a long time, there's still no people kindly feed back any issue report or feature request, they just use it freely but don't willing to give respect to other's labour. I changed my idea from "Free Forever" to "You should pay for good stuff". The app is really good but they made it down and down, that's made me angry, that's why Speare becomes a paid app from free app. Sorry.
+<p>Speare has really good features, such as parallel editing, high performance searching and symbol definition parsing. But after a long time, there's still no people kindly feed back any issue report or feature request, they just use it freely but don't willing to give respect to other's works. I changed my idea from "Free Forever" to "You should pay for good stuff". The app is really good but they made it down and down, that's made me angry, that's why Speare becomes a paid app from free app. Sorry.
 </p>
 
 
