--- a/en/uftp.html
+++ b/en/uftp.html
@@ -65,7 +65,7 @@ click the folder icon and then select a folder that you want to be used as the r
 <span><span class="sha">SHA256: </span>55dc46af5299ea9218b41dd9ed2a1aa802e9a0e89e15c4166862c0aaa618e007</span>
 </p></div>
 
-This small util is really useful when you want quickly move files between Mac and other devices.
+This small utility is really useful when you want quickly move files between Mac and other devices.
 <p><br><br></p>
 
 
