--- a/en/metalogic.html
+++ b/en/metalogic.html
@@ -27,8 +27,8 @@
     <div class="jumbotron">
         <p><img src="../images/metalogic/logo.png" style="width: 120px;" /></p>
         <h1> MetaLogic <br><em>Version 1.2</em></h1>
-        <p class="greenbig"><em>The productive util used to organise programming assets.</em></p>
-        <p class="lead"><b>MetaLogic</b> is a small util developed to effectively manage programming assets, include shell snippets, code blocks, sample code files, libraries, packages, Web links and other resources. It's also a powerful util used to classify and organise programming resource by topics, categories, functions, programming languages, key words etc. MetaLogic help people organise large amount of programming resources in a very flexible way, and has complete freedom to define all kinds of metadata fields for management of classification and organisation.</p>
+        <p class="greenbig"><em>The productive utility used to organise programming assets.</em></p>
+        <p class="lead"><b>MetaLogic</b> is a small utility developed to effectively manage programming assets, include shell snippets, code blocks, sample code files, libraries, packages, Web links and other resources. It's also a powerful utility used to classify and organise programming resource by topics, categories, functions, programming languages, key words etc. MetaLogic help people organise large amount of programming resources in a very flexible way, and has complete freedom to define all kinds of metadata fields for management of classification and organisation.</p>
     </div>
 
 <p><a href="https://apps.apple.com/us/app/metalogic/id1541450342?mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p>
