--- a/en/speare.html
+++ b/en/speare.html
@@ -169,6 +169,10 @@ Screenshot of <a href="https://www.llvm.org/" target="_blank">LLVM</a> in Speare
 <h2>Debug Mode</h2>
 <p>Speare seamlessly support debugging C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl script, more info see here: <a href="debugger.html" target="_blank" > → Speare debugger architecture</a>.</p>
 
+<h2>Speare Keyboard Shortcuts</h2>
+<p>Please refer the table: <a href="http://www.sevenuc.com/download/speare_shortcuts.pdf" target="_blank">speare_shortcuts.pdf</a>
+</p>
+
 
 <h2>Syntax Checking and Run Code Instantly</h2>
 <p>a. Press shortcut key "Command + R".<br>
@@ -177,7 +181,7 @@ b. Click menu: File → Run External Command.<br>
 
 
 <h2>Integrated development environment</h2>
-<p>Speare code editor can easily integrate building tools, code analysis tools and continue deploy tools. You can run different tasks in Speare code editor instantly, such as automatic compile (run makefile, CMake, Ant tasks etc), building and packing, or run static code analysis tools (source code analyzer, such as PC-Lint, clang-analyzer, PHPLint, OCLint, PMD, etc), unit testing tools, memory leak detection tools such as Valgrind, performance analysis tools, code style check tools, and any other tasks. Speare code editor provides you complete freedom to extend the IDE to satisfy special requirements of your development environment. 
+<p>Speare code editor can easily integrate building tools, code analysis tools and continue deploy tools. You can run different tasks in Speare code editor instantly, such as automatic compile (run makefile, CMake, Ant tasks etc), building and packing, or run static code analysis tools (source code analyzer, such as PC-Lint, clang-analyzer, PHPLint, OCLint, SwiftLint, and PMD etc), unit testing tools, memory leak detection tools such as Valgrind, performance analysis tools, code style check tools, and any other tasks. Speare code editor provides you complete freedom to extend the IDE to satisfy special requirements of your development environment. 
 </p>
 
 
