--- a/en/speare.html
+++ b/en/speare.html
@@ -32,7 +32,7 @@ w {color:#ffc8c8; font-weight: bold;}
         <h1>Speare<br><em>Version 1.2.344</em></h1>
         <p class="greenbig">The elegant code editor for scripting languages.</p>
         <p class="lead">
-<a href="http://www.sevenuc.com/en/speare.html">Speare</a> is a small and friendly code editor. You can use it to edit source code files, programming and debugging. It designed to make programming feels light, simple and free. Speare code editor not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend it to support special developing requirements. Speare code editor includes an ultra lightweight debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give people complete freedom to control and customise the debugging environment for a new programming language.</p>
+<a href="http://www.sevenuc.com/en/speare.html">Speare</a> is a small and friendly code editor. You can use it to edit source code files, programming and debugging. It designed to make programming feels light, simple and free. Speare not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend it to support special developing requirements. Speare code editor includes an ultra lightweight debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give people complete freedom to control and customise the debugging environment for a new programming language.</p>
     </div>
 
 <!--p class="greenbig">It's free!</p-->
