--- a/en/speare.html
+++ b/en/speare.html
@@ -161,13 +161,13 @@ Screenshot of <a href="https://www.llvm.org/" target="_blank">LLVM</a> in Speare
 </p>
 
 
-<h2>Lite Mode</h2>
-<p>Click main menu "View" → "Hide Toolbar". "Lite Mode" can turn Speare to be a concise text editor that let user feels more light when open and edit several files but not work on a project that has a large number of files. Under "Lite Mode", please switch workspace views by select menu items of "Navigate" replace of click toolbar items.
+<h2>Ultra light code editor</h2>
+<p>Speare completely removed toolbar and tabs from a particular version, the purpose is to encourage people use keyboard shortcuts instead of clicking icons. That results Speare becomes to be an ultra concise text editor that let user feels very light. Under the "Light Mode" code editor, switching workspace views by select menu items replace of click toolbar items.
 </p>
 
 
 <h2>Debug Mode</h2>
-<p>Speare seamlessly support debugging C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl script, more info see here: <a href="debugger.html" target="_blank" > → Speare debugger architecture</a>.</p>
+<p>Speare seamlessly support debugging C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl scripts, more info please refer here: <a href="debugger.html" target="_blank" > → Speare debugger architecture</a>.</p>
 
 <h2>Speare Keyboard Shortcuts</h2>
 <p>Please refer the table: <a href="http://www.sevenuc.com/download/speare_shortcuts.pdf" target="_blank">speare_shortcuts.pdf</a>
@@ -176,7 +176,7 @@ Screenshot of <a href="https://www.llvm.org/" target="_blank">LLVM</a> in Speare
 
 <h2>Syntax Checking and Run Code Instantly</h2>
 <p>a. Press shortcut key "Command + R".<br>
-b. Click menu: File → Run External Command.<br>
+b. Click menu: "Command" → "Syntax Checking &amp; Run".<br>
 </p>
 
 
