--- a/en/apps.html
+++ b/en/apps.html
@@ -58,8 +58,8 @@
 <div class="row block2">
 <div class="col-md-4">
 <p><a href="speare.html"><img src="../images/speare/logo.png" class="macapp" /></a></p>
-<h2>Speare Code Editor</h2>
-<p>The elegant code editor for scripting languages.<br><br> <a href="speare.html"><b>Speare</b></a> is an ultra lightweight code editor that provides built-in debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl.</p>
+<h2>Speare</h2>
+<p>The ultra light code editor.<br><br> <a href="speare.html"><b>Speare</b></a> is an ultra lightweight code editor that provides built-in debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl.</p>
 </div> <!-- col-md-4-->
 
 
