--- a/en/debugger.html
+++ b/en/debugger.html
@@ -35,7 +35,7 @@
  /___/ .__/\__/\_,_/_/  \__/
     /_/
 Speare Pro v1.2.344
-The elegant code editor for scripting languages.
+The ultra light code editor.
 (c) 2021 http://www.sevenuc.com
 </pre></p>
         <h1></h1>
