--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
   _\ \/ _ \/ -_) _ `/ __/ -_)
  /___/ .__/\__/\_,_/_/  \__/
     /_/
-Speare Code Editor v1.2.344
-The elegant code editor for scripting languages.
+Speare v1.2.344
+The ultra light code editor.
 (c) 2021 http://www.sevenuc.com
 </pre></div>
 
