--- a/en/speare.html
+++ b/en/speare.html
@@ -38,7 +38,7 @@ w {color:#ffc8c8; font-weight: bold;}
 <!--p class="greenbig">It's free!</p-->
 
 <h2>It's not free now!</h2>
-<p>Speare has really good features, such as parallel editing, instant diff, high performance searching and symbol definition parsing. But after a long time, there's still no people kindly feed back any issue report or feature request, they just use it freely but don't willing to give respect to other's works. I changed my idea from "Free Forever" to "You should pay for good stuff". The app is really good but they made it down and down, that's made me angry, that's why Speare becomes a paid app from free app. Sorry.
+<p>Speare has really good features, such as parallel editing, instant diff, high performance searching and symbol definition parsing. But after a long time, still no people kindly feed back any issue report or feature request, they just use it freely but don't willing to give respect to other's works. I changed my idea from "Free Forever" to "You should pay for good stuff". The app is really good but they made it down and down, that's made me angry, that's why Speare becomes a paid app from free app. Sorry.
 </p>
 
 
@@ -49,27 +49,25 @@ w {color:#ffc8c8; font-weight: bold;}
 
 <h2>Features</h2>
 <p><ul>
-<li>Well designed workspace management. Intuitive and concise.</li> 
-<li>Powerful code navigation and call routines tracing ability.</li>
-<li>Fast find edit points by symbol index, bookmarks or searching.</li>
+<li>Ultra lightweight.</li>
+<li>Well designed workspace management. Intuitive and concise.</li>
 <li>High performance when managing large amount of files and big files.</li>
-<li>Full featured code editor. Powerful symbol parser for 90+ programming languages.</li>
 <li>Fast search and replace in current document, selected folder, opened files and entire project.</li>
 <li>Smoothly edit multiple files that written in different programming languages simultaneously.</li>
-<li>High performance symbol parsing engine for auto-completion and jump-to-definition.</li>
-<li>Parallel editing. Fast editing two arbitrary files in parallel text views.</li>
-<li>Real-time Diff. Show coloured code block of file changes with editing actions instantly.</li>
-<li>Efficiently manage working on files across exit, re-launch and project switching.</li>
-<li>Powerful built-in code formatter (code beautifier).</li>
-<li>Fast project switching and powerful insisted bookmark management.</li>
-<li>Keeping entire state after quit, the opened files, selection of each file and the cursor location.</li>
-<li>High extensible. Built-in debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl.</li>
-<li>Syntax checking, run code and unit test instantly, unlimited extension by shell scripts.</li>
-<li>Full featured Markdown and HTML5 editor and previewer, run Javascript code instantly.</li>
+<li>Supports 90+ programming languages syntax highlighting and parsing.</li>
+<li>Auto-completion, sensitively typing, live parsing symbol definitions with editing actions.</li>
+<li>Jump to definition, fast locate code lines between editing files by symbol index, bookmarks or searching.</li>
 <li>Unlimited go back and forward, automatically remember jump location and current editing locations.</li>
+<li>Keeping entire state after quit, the opened files, selection of each file and the cursor location.</li>
+<li>Parallel editing. Fast editing arbitrary files in parallel text views.</li>
+<li>Real-time diff. Show coloured code block of file changes with editing actions instantly.</li>
+<li>Fonts and colours customisation, supports self-defined schemes.</li>
+<li>Efficiently manage working on files across quit, re-launch and project switching.</li>
+<li>Full featured Markdown and HTML editor and previewer, run Javascript code instantly, well-support Web development.</li>
+<li>Code block selection by double clicking the beginning symbol or the beginning line of the block.</li>
+<li>Run syntax checking instantly.</li>
+<li>Unlimited shell script extensions, code beautifier, unit test, building automation etc.</li>
 <li>Preview all kinds of files, image, SVG, PDF, office documents, audio and video etc.</li>
-<li>Fonts and colours customisation for the text editor.</li>
-<li>Ultra lightweight.</li>
 </ul></p>
 
 
