--- a/en/speare.html
+++ b/en/speare.html
@@ -160,7 +160,7 @@ Screenshot of <a href="https://www.llvm.org/" target="_blank">LLVM</a> in Speare
 
 
 <h2>Ultra light code editor</h2>
-<p>Speare completely removed toolbar and tabs from a particular version, the purpose is to encourage people use keyboard shortcuts instead of clicking icons. That results Speare becomes to be an ultra concise text editor that let user feels very light. Under the "Light Mode" code editor, switching workspace views by select menu items replace of click toolbar items.
+<p>Speare completely removed toolbar from a particular version, the purpose is to encourage people use keyboard shortcuts instead of clicking icons. That results Speare becomes to be an ultra concise text editor that let programming feels very light. Under the "Light Mode" code editor, switching workspace views by select menu items replace of click toolbar items.
 </p>
 
 
