--- a/en/tungsyu.html
+++ b/en/tungsyu.html
@@ -28,7 +28,8 @@
         <p><img src="../images/Tungsyu/logo.png" style="width: 120px;" /></p>
         <h1>Tungsyu<br><em>Version 1.3 </em></h1>
         <p class="greenbig">Tungsyu, the Calendar of Yangtze River.</p>
-        <p class="lead"><b>Tungsyu「通書」</b> (The Calendar of Yangtze River), 是一個為提供農曆相關資訊查詢而特意開發的工具軟體。 該軟體提供農曆各個年月、特定日子以及該日各時辰之天干、地支信息，及星期、星座、五行屬性、值日星宿、十二直、忌日、用時宜忌等資訊。 使用該工具可非常方便地進行西曆和農曆的相互轉換和對照。開發該工具軟體以方便使用者進行農曆相關資訊之便捷查詢。</p>
+        <p class="lead"><b>「通書」</b> 一個為提供農曆相關資訊查詢而特意開發的工具軟體。 <br>
+使用該工具可非常便捷地進行西曆和農曆之對照，及農曆相關資訊查詢。</p>
     </div>
     
 <p><a href="https://itunes.apple.com/us/app/tungsyu/id1457444475?mt=12" target="_blank" class="appstore_download_link" ><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br><br><br><br>
@@ -42,7 +43,7 @@
 </p>
 
 <h2>查詢</h2>
-<p>1. 系統默認顯示今日之年月及日期。</p>
+<p>1. 系統默認顯示今日之農曆資訊。</p>
 <p>2. 逐月、逐年及按特定年月查詢:<br>
 <ul><li>點擊 <img src="../images/Tungsyu/m-.png" class="button" /> 可逐月返回上一月之農曆資訊，若達正月，則返回上一年十二月。</li>
 <li>點擊 <img src="../images/Tungsyu/m+.png" class="button" /> 可逐月返回下一月之農曆資訊，若達十二月，則返回下一年正月。</li>
@@ -52,7 +53,8 @@
 <li>輸入特定年月，則可直接對特定年月進行查詢。</li>
 </ul></p>
 <p>3. 點擊特定日，系統則更新該日之詳細資訊。</p>
-<p>4. 右鍵點擊  → 有節日之日，則可查看該節日之描述。</p>
+<p>4. 點擊"列印"，系統則將所選月之農曆資訊列印至一張卡片。</p>
+<p>5. 右鍵點擊  → 有節日之日，則可查看該節日之描述。</p>
 
 
 <h2>引用</h2>
