--- a/en/taihaa.html
+++ b/en/taihaa.html
@@ -39,13 +39,12 @@
 <p>
 1. A high precision calculator that can convert from solar calendar to lunar calendar or vice versa accurate at one second.<br>
 2. A high precision fate eight-character calculator that applied many missing rules in common calculation method.<br>
-3. Calculate big lucky years based on very accurate time values of 24 solar terms, that must be accurate to one second.<br><br>
-<span class="green">&nbsp;&nbsp;To get the above accurate time values, it requires very big calculation and following many rules. The high precision lunar date-time calculation already extended to AD 6712, values after that year is not accurate to one second. After compare, the calculated result of 24 solar terms in the near 200 years has the completed same result calculated with the astronomical data provided by the Royal Nautical Almanac and the US Navy Astronomical Meteorological Station.</span><br>
+3. Calculate big lucky years based on high accurate time values of 24 solar terms.<br><br>
 </p>
 
 
 <h2>Intellectual Property Transfer</h2>
-<p>Taihaa has a built-in fate analysis engine that can be developed as fate telling device. This solution is specially designed for embedded systems and it can be developed as standalone machine or handheld device. The engine is completely developed with ANSI C that has a very small size and includes a fate analysis engine and a PDF document printing engine. The business prospects of this system are very broad, and the economic benefits are huge. The device is suitable to installed in various entertainment places. Consumers only needs to scan the CR code with their mobile phone and then the machine can print beautifully fate analysis report. If you are interested in using the source code of the engine to develop commercial product, please contact us for more details.
+<p>Taihaa has a built-in fate analysis engine that can be developed as fate telling device. This solution is specially designed for embedded systems and it can be developed as standalone machine or handheld device. The engine is completely developed with ANSI C that has a very small size and includes a fate analysis engine and a PDF document printing engine. The business prospects of this system are very broad, and the economic benefits are huge. The device is suitable to be installed in various entertainment places. Consumers only needs to scan the CR code with their mobile phone and then the machine can print beautifully fate analysis report. If you are interested in using the source code of the engine to develop commercial product, please contact us for more details.
 </p>
 
 
@@ -65,8 +64,7 @@
 <p>
 1.  高精度公曆與農曆轉換器，日期計算器，要求高精度計算。精確到秒。<br>
 2.  高精度八字計算器。包含應用到一些普通算法沒有的規則。<br>
-3.  根據高精準的農曆24節氣計算大運年月，精確到秒。<br><br>
-&nbsp;&nbsp;<span class="green">要獲得上述這些準確的時間值，需要進行大量計算並遵循許多規則。 農曆可精確計算至西元6712年，西元6712年之後計算結果有誤差，通過比對近200年農曆計算結果，與根據英國皇家航海曆書局及美國海軍天文氣象台提供的天文數據計算出之結果完全一致。</span><br>
+3.  根據高精確之農曆24節氣計算大運年月。<br><br>
 </p>
 
 
