--- a/en/apps.html
+++ b/en/apps.html
@@ -124,8 +124,8 @@
 
 <div class="row block2">
 <div class="col-md-4">
-<p><a href="powerreader.html"><img src="../images/editor/logo.png" class="appicon" /></a></p>
-<p><a href="powerreader.html"><b>iPowerReader</b></a> is a Finder-like file manager on iOS device, you can transfer, delete, rename any file or folder one by one just like in Finder that completely different with translating files with iTunes that required to sync whole folder, it's more intuitive, simple, fast and feel free. You can conveniently share your documents in your iOS devices between Mac, Windows PC, Linux, Android, Unix, PSP and other platforms remotely. 
+<p><a href="iosfinder.html"><img src="../images/editor/logo.png" class="appicon" /></a></p>
+<p><a href="iosfinder.html"><b>iOSFinder</b></a> is a Finder-like file manager on iOS device, you can transfer, delete, rename any file or folder one by one just like in Finder that completely different with translating files with iTunes that required to sync whole folder, it's more intuitive, simple, fast and feel free. You can conveniently share your documents in your iOS devices between Mac, Windows PC, Linux, Android, Unix, PSP and other platforms remotely. 
 </p>
 </div> <!-- col-md-4-->
 
