--- a/en/iosfinder.html
+++ b/en/iosfinder.html
@@ -66,7 +66,7 @@ So, this app developed to help you manage files in your iOS devices just like on
 <p>The above video is very old, but demonstrate the app's features.</p>
 
 <h2>Fast share files between your Mac, Windows PC or Linux, Android and iOS devices</h2>
-<p><lt>iOSFinder is a Finder-like file manager on iOS device, you can transfer, delete, rename any file or folder one by one just like in Finder that completely different with translating files with iTunes that required to sync whole folder, it's more intuitive, simple, fast and feel free.</lt></p>
+<p><lt>iOSFinder is a Finder-like file manager on iOS device, you can transfer, delete, rename any file or folder one by one just like in Finder that completely different with translating files with iTunes that required to sync whole folder, it's more intuitive, simple, fast and feels free.</lt></p>
 
 <p>You can download all kinds of files from your Mac or PC and read them on your iOS devices. You can also upload any kinds of files to your Mac or PC from your iPhone or iPad. Browse eBooks and PDF files, read Office documents e.g. EXCEL, WORD and PowerPoint, view pictures by slipping your finger, listening musics like in iTunes and watching movies. Of course, the app can be emphasised using as a resource explorer like Finder on Mac. iOSFinder designed to be a P2P file share solution, you can directly move files between your desktop, server, mobile phone and iOS devices remotely.</p>
 
@@ -75,34 +75,34 @@ So, this app developed to help you manage files in your iOS devices just like on
 <li> Fast download or upload folders that holds large number of files. All sub-folder and files will be downloaded or uploaded automatically.</li>
 <li> Efficiently organise and manage folder and files. Add, delete and rename folder or file, fast translate them between Mac, Windows PC, Linux, Android and iOS devices. The FTP Server can be running on any common platforms, Mac, Windows, Linux, Unix, Android, PSP Game box and others.</li>
 <li> Read all kinds of files on your iOS devices conveniently.</li>
-<li> Automatically generate thumbnail for image and video, and different icon for different file types, e.g. pdf, office documents, audio, web files and any type of source code files.</li>
+<li> Automatically generate thumbnail for image and video, detect and display different icon for different file types, e.g. PDF, Office documents, audio, Web files and any type of source code files.</li>
 </ul>
 
 
 <h2>Read &amp; Review code on iPad</h2>
-<p class="hilight">iOSFinder was renamed from <b>iCodeEditor</b>(another name is iPowerReader), means that it was originally developed to edit source code on iPad, in fact, yes, it actually a full featured code editor. This function was especially designed for anyone who wants to read or edit source code on iOS device.</p>
+<p class="hilight">iOSFinder was renamed from <b>iCodeEditor</b> (another name is iPowerReader), means that it was originally developed to edit source code on iPad, in fact, yes, it's actually a full featured code editor. This function was especially designed for anyone who wants to read or edit source code on iOS device.</p>
 <ul>
-<li> Syntax highlighting. Source code parser integrated and symbols indexed, such as module, class, function definition, variable declaration etc.</li>
-<li> Symbol browse and filter. Search symbols in folder that holds large number of files.</li>
-<li> Jump to symbol or jump to line. <b>Accurate line location by line number or by the symbol definition</b>.</li>
-<li> Live web page preview. Preview website design with the builtin web browser, so convenient!</li>
-<li> Read code or other files on iPhone is convenient and useful, but edit source code file on iPad will feel better.</li>
+<li> Syntax highlighting. The built-in source code parser can instantly index symbol definitions, such as module, class, function definition, variable declaration etc.</li>
+<li> Symbol definition browse and filter. Fast search symbols in folder that holds large number of files.</li>
+<li> Jump to symbol definition or jump to line. Accurate line location by line number or by the symbol definition.</li>
+<li> Live web page preview. Preview website design with the built-in web browser, so convenient!</li>
+<li> Read code or other files on iPhone is convenient and useful, but edit source code file on iPad will feels better.</li>
 </ul>
-<p>The editor supports <b>Syntax Highlighting</b> for almost all popular programming languages, including but not limited:</p>
+<p>The editor supports "Syntax Highlighting" for almost all popular programming languages, including but not limited:</p>
 <p class="small">Verilog, System Verilog, VHDL, MATLAB (with OO features), Asm (Assembler/Assembly language), <gr>Tcl</gr>, Ada, <gr>Fortran</gr>, Forth, Cobol, SML (Standard ML), S-Lang, Vim, <gr>LaTeX</gr>, Asciidoc, <gr>Markdown</gr>, Typescript, REXX, Flex, <gr>Lisp</gr>, Clojure, R, <gr>Rust</gr>, Haxe, OCaml (Objective Caml), Scheme, Apache, Pig, <gr>Awk</gr>, shell scripts, PowerShell, DOS batch, Basic, Asp, Pascal (Delphi/Object Pascal), Eiffel, <gr>Java</gr>, Scala, Groovy, gradle, XSLT, XSD, Xquery, WSDL, Snippets, nasl, Puppet, Sedona, Protobuf, <gr>Parrot</gr>, Myrddin, Ansible, Ant, Make, Go, Erlang, <gr>Lua</gr>, ActionScript, <gr>C</gr>, C++, Smalltalk, C#, <gr>Objective-C</gr>, Swift, PL/SQL, HTML, <gr>CSS</gr>, System css, <gr>JavaScript</gr>, CoffeeScript, Perl, <gr>PHP</gr>, Python, <gr>Ruby</gr>, Elixir, etc.</p>
 
-<p>If you want a lightweight code editor on Mac, please refer another app developed by me: <a href="speare.html">Speare code editor</a>, the free small IDE for scripting languages.</p>
+<p>If you want a lightweight code editor on Mac, please refer another app developed by me: <a href="speare.html">Speare code editor</a>, an ultra light code editor that originally developed to provide a native debug environment for scripting languages.</p>
 
 
 <h2>FTP Server Settings</h2>
 <p><strong>1. On Macintosh:</strong> System Preferences → Sharing → File Sharing, check the service and got the IP address of your machine, then you can input it in the settings of iOSFinder.<br><br><a href="../images/editor/ftp.png" target="_blank"><img src="../images/editor/ftp.png" alt="" class="screenshots"/></a><br><br>
-<a href="uftp.html"><img src="../images/uftp/logo.png" alt="" style="width:32px;height:auto;vertical-align: -1ex;"/></a>Because macOS High Sierra removed the builtin FTP Server, there's an alternative solution: 
+<a href="uftp.html"><img src="../images/uftp/logo.png" alt="" style="width:32px;height:auto;vertical-align: -1ex;"/></a>Because macOS High Sierra removed the built-in FTP Server, there's an alternative solution: 
 <a href="http://www.sevenuc.com/en/uftp.html">Personal FTP Server</a>, use the uFTP Server, your FTP settings of iOSFinder should be changed to: <b>192.168.1.4:2121</b>, i.e. append a port number to the server IP address and sperate with <b>a colon ":"</b>, for the example, the port number is 2121, then the appending string is <span class="warning">":2121"</span>, five characters. 
 </p>
 
 <p><strong>2. On Windows:</strong><br>
-<ol><li>The Windows builtin FTP Server can be configured via IIS (Internet Information Services), please read <a href="https://technet.microsoft.com/en-us//library/hh831655.aspx">this article</a> and other articles about this subject on the website of Microsoft.</li>
-<li>Free and Open Source solution: <a href="https://filezilla-project.org">FileZilla Server</a>, highly commended.</li>
+<ol><li>The Windows built-in FTP Server can be configured via IIS (Internet Information Services), please read <a href="https://technet.microsoft.com/en-us//library/hh831655.aspx">this article</a> and other articles about this subject on the website of Microsoft.</li>
+<li>Free and Open Source solution: <a href="https://filezilla-project.org">FileZilla Server</a>, highly recommended.</li>
 <li><a href="https://www.cerberusftp.com">Cerberus FTP Server</a> (Proprietary software).</li>
 <li><a href="http://www.crushftp.com/">CrushFTP Server</a> (Proprietary software).</li></ol>
 </p>
@@ -115,9 +115,9 @@ So, this app developed to help you manage files in your iOS devices just like on
 <h2>Screenshots</h2>
 <div class="screenshots__">
 <p><a href="../images/editor/405.png" target="_blank"><img src="../images/editor/405.png" class="screenshots"></a></p>
-<p class="smallsection">Universal Finder-like file manager for iOS device. Fast file transfer between iOS device and Mac, Windows PC, Linux, Android phone and other platforms. <gr>You can select and apply operations (add, delete, translate file or folder, explore subfolders) on any folder and file one by one and intuitively compare folder content between iOS device and remote folder (e.g. FTP folder on MacBook).</gr></p>
+<p class="smallsection">Universal Finder-like file manager for iOS device. Fast file transfer between iOS device and Mac, Windows PC, Linux, Android phone and other platforms. <gr>You can select and apply operations (add, delete, translate file or folder, explore subfolders) on any folder and file one by one and intuitively compare folder content between iOS device and the remote folder (e.g. FTP folder on MacBook).</gr></p>
 <p><a href="../images/editor/400.png" target="_blank"><img src="../images/editor/400.png" class="screenshots"></a></p>
-<p class="smallsection">Home panel provides entries to manage local storage on iOS device and remote files on FTP server that running on Mac, Windows, Linux, Unix, Android, Game box and others.</p>
+<p class="smallsection">Home panel provides entries to manage local storage on iOS device and remote folders on FTP server that running on Mac, Windows, Linux, Unix, Android, Game box and others.</p>
 <p><a href="../images/editor/401.png" target="_blank"><img src="../images/editor/401.png" class="screenshots"></a></p>
 <p class="smallsection">Browse photos on iOS device by slipping finger.</p>
 <p><a href="../images/editor/402.png" target="_blank"><img src="../images/editor/402.png" class="screenshots"></a></p>
@@ -125,9 +125,9 @@ So, this app developed to help you manage files in your iOS devices just like on
 <p><a href="../images/editor/403.png" target="_blank"><img src="../images/editor/403.png" class="screenshots"></a></p>
 <p class="smallsection">Full featured code editor for iOS device. Read, review and edit source code on iOS device.</p>
 <p><a href="../images/editor/404.png" target="_blank"><img src="../images/editor/404.png" class="screenshots"></a></p>
-<p class="smallsection">Full featured multimedia player for iOS device. Transfer your music and movie from other platforms on your iOS devices and enjoy them later.</p>
+<p class="smallsection">Full featured multimedia player for iOS device. Transfer your music and movie from other platforms in your iOS devices and enjoy them later.</p>
 </div>
-<p><span class="note">New </span>&nbsp;&nbsp; The built-in music player in the last updated version supports lyrics synchronising, playlist management, cycle loop or random playback. The player can synchronise lyrics sheet with music files, you just needs to put the lyrics sheet that has a .lrc extension together with the music file, i.e. the mp3 file and the .lrc file both must be put under the same folder and has a same file name. <span><a href="http://www.sevenuc.com/en/lyricsmaker.html" target="_blank"><img src="../images/lyricsmaker/logo.png" class="smallicon" /></a></span><a href="http://www.sevenuc.com/en/lyricsmaker.html" target="_blank">LyricsMaker</a> is a small utility that designed to help making lyrics sheet for music files very easy.</p>
+<p><span class="note">New </span>&nbsp;&nbsp; The built-in music player in the last updated version supports lyrics synchronising, playlist management, cycle loop or random playback. The player can synchronise lyrics sheet with music files, this feature just requires to put the lyrics sheet that has a .lrc extension name together with the music file, i.e. the .mp3 file and the .lrc file both must be put under the same folder and has a same file name. <span><a href="http://www.sevenuc.com/en/lyricsmaker.html" target="_blank"><img src="../images/lyricsmaker/logo.png" class="smallicon" /></a></span><a href="http://www.sevenuc.com/en/lyricsmaker.html" target="_blank">LyricsMaker</a> is a small utility that designed to help making lyrics sheet for music files very easy.</p>
 <p><br></p>
 
 
