--- a/en/iosfinder.html
+++ b/en/iosfinder.html
@@ -80,7 +80,7 @@ So, this app developed to help you manage files in your iOS devices just like on
 
 
 <h2>Read &amp; Review code on iPad</h2>
-<p class="hilight">iOSFinder was renamed from <b>iCodeEditor</b> (another name is iPowerReader), means that it was originally developed to edit source code on iPad, in fact, yes, it's actually a full featured code editor. This function was especially designed for anyone who wants to read or edit source code on iOS device.</p>
+<p class="hilight">iOSFinder was renamed from iCodeEditor, means that it was originally developed to edit source code on iPad. In fact, yes, it's actually a full featured code editor for iPad, originally designed to review code on iPad. The app was especially designed for anyone who wants to read or edit source code on iOS device.</p>
 <ul>
 <li> Syntax highlighting. The built-in source code parser can instantly index symbol definitions, such as module, class, function definition, variable declaration etc.</li>
 <li> Symbol definition browse and filter. Fast search symbols in folder that holds large number of files.</li>
