--- a/en/iosfinder.html
+++ b/en/iosfinder.html
@@ -115,7 +115,8 @@ So, this app developed to help you manage files in your iOS devices just like on
 <h2>Screenshots</h2>
 <div class="screenshots__">
 <p><a href="../images/editor/405.png" target="_blank"><img src="../images/editor/405.png" class="screenshots"></a></p>
-<p class="smallsection">Universal Finder-like file manager for iOS device. Fast file transfer between iOS device and Mac, Windows PC, Linux, Android phone and other platforms. <gr>You can select and apply operations (add, delete, translate file or folder, explore subfolders) on any folder and file one by one and intuitively compare folder content between iOS device and the remote folder (e.g. FTP folder on MacBook).</gr></p>
+<p class="smallsection">Universal Finder-like file manager for iOS device. <br>
+Fast file transfer between iOS device and Mac, Windows PC, Linux, Android phone and other platforms. In the two half-screen parallel folders views, <gr>you can select and apply any operations (add, delete, translate file or folder, explore subfolders) on any folder and file one by one on both sides, and intuitively compare folder content between local folder of iOS device and the remote folder (e.g. FTP folder on MacBook).</gr></p>
 <p><a href="../images/editor/400.png" target="_blank"><img src="../images/editor/400.png" class="screenshots"></a></p>
 <p class="smallsection">Home panel provides entries to manage local storage on iOS device and remote folders on FTP server that running on Mac, Windows, Linux, Unix, Android, Game box and others.</p>
 <p><a href="../images/editor/401.png" target="_blank"><img src="../images/editor/401.png" class="screenshots"></a></p>
