--- a/en/bc.html
+++ b/en/bc.html
@@ -27,18 +27,18 @@
     <div class="jumbotron">
         <h1>Business Chinese</h1>
         <p class="lead">
-<b>Business Chinese</b> is a pocket language learning tool that be carefully designed as a flash cards dictionary and business core words reference audio book. You can learn how to speaking elegant Chinese language in an efficient way. The app has a build-in text to speech synthesis engine that can instantly translate word, sentence or a whole paragraph into speech and speaking with correct pure native pronunciation. A Kanji character stroke animation engine that can demonstrate how to writing each character also be built in the app. </p>
+<b>Business Chinese</b> is a pocket language learning tool that was carefully designed as a flash cards dictionary and business core words reference audio book. You can learn how to speaking elegant Chinese language in an efficient way. The app has a build-in text to speech synthesis engine that can instantly translate word, sentence or a whole paragraph into speech and speaking with correct pure native pronunciation. A Kanji character stroke animation engine that can demonstrate how to writing each character also be built in the app. </p>
     </div>
     
 
 <h2>Features:</h2>
 
 <ul>
-<li> <span class="hilight"> Click English word will dynamically highlight the corresponding Chinese word or vice versa</span>, each business sentence has accurate translation between Chinese and English, and the words be associated by their meanings. Master business Chinese basic vocabulary become easy.</li>
-<li> Offline speech synthesis, and speaking word or sentence.</li>
+<li> <span class="hilight"> Click English word will dynamically highlight the corresponding Chinese word or vice versa</span>, each business sentence has accurate translation between Chinese and English, and the words be associated by their meanings. Master business Chinese basic vocabulary becomes easy.</li>
+<li> Offline speech synthesis, live speaking word or sentence.</li>
 <li> Include almost all of the most frequently used keywords in business scenarios through elaborately selected sentences.</li>
-<li> The Yale, and Jyutping romanisation system can be smoothly switched by settings.</li>
-<li> Learning kanji character and word with the build in flash cards, speech synthesis engine and stroke animation. Master the meaning, pronunciation and the writing of kanji characters become easy.</li>
+<li> The Yale and Jyutping romanisation system can be smoothly switched by settings.</li>
+<li> Learning kanji character and word with the build in flash cards, speech synthesis engine and stroke animation. Master the meaning, pronunciation and the writing of kanji characters becomes easy.</li>
 </ul>
 
 <h2>References:</h2>
