--- a/en/service.html
+++ b/en/service.html
@@ -31,7 +31,9 @@
 <h1>Services</h1>
 <h4>Senior business consulting services.</h4>
 <p><br><br></p>
-<p><a href="../images/wave.png" target="_blank"><img src="../images/wave.png" class="screenshots"><br>
+<p><a href="../images/Ridiculous_Desk.png" target="_blank"><img src="../images/Ridiculous_Desk.png" class="screenshots"></a><br>
+</p>
+<p><b>"Ridiculous Desk"</b> was originally created by sevenuc.com, please keeping the copyright when you quoting it.
 </p>
 
 </div> 
