--- a/en/speare.html
+++ b/en/speare.html
@@ -83,6 +83,11 @@ Screenshot of <a href="https://www.llvm.org/" target="_blank">LLVM</a> in Speare
 </p>
 
 
+<h2>Parallel Editing</h2>
+<p>
+<a href="parallelediting.html" target="_blank">Parallel Editing</a> allows user stick one file in the bottom view and fast editing code by switching different files in the top view on-the-flying.
+</p>
+
 <h2>Fast edit several files separately</h2>
 <p>Just drag the file one by one from Finder and drop into workspace, edit them and then right-click to "Remove All".</p>
 
